# KalkulierbaRust

./: .gitignore  Cargo.toml
crates/kalkulierbar/: Cargo.toml
crates/kalkulierbar/benches/: kbar_bench.rs
crates/kalkulierbar/src/: arena.rs  calculus.rs  consts.rs  lib.rs  macros.rs  str.rs  symbol.rs  tamper_protect.rs
crates/kalkulierbar/src/calculi/: dpll.rs  mod.rs  resolution.rs  sequent.rs  tableaux.rs
crates/kalkulierbar/src/calculi/dpll/: mod.rs
crates/kalkulierbar/src/calculi/resolution/: fo.rs  mod.rs  prop.rs  util.rs
crates/kalkulierbar/src/calculi/sequent/: fo.rs  mod.rs  prop.rs
crates/kalkulierbar/src/calculi/tableaux/: fo.rs  mod.rs  modal.rs  nc.rs  prop.rs
crates/kalkulierbar/src/clause/: mod.rs
crates/kalkulierbar/src/logic/: fo.rs  mod.rs  unify.rs
crates/kalkulierbar/src/logic/transform/: cnf.rs  collectors.rs  fo_cnf.rs  logic_node_manipulation.rs  mod.rs  naive_cnf.rs  negation_normal.rs  prenex_normal.rs  remove_equivs.rs  signature.rs  skolem.rs  skolem_normal.rs  term_manipulator.rs  to_basic.rs  transformer.rs  tseytin_cnf.rs  unique_vars.rs  visitor.rs
crates/kalkulierbar/src/logic/unify/: mod.rs  unifier_eq.rs
crates/kalkulierbar/src/parse/: clause_set.rs  fo.rs  mod.rs  modal.rs  prop.rs  sequent.rs
crates/kalkulierbar_server/: Cargo.toml
crates/kalkulierbar_server/src/: dpll.rs  main.rs  resolution.rs  sequent.rs  statekeeper.rs  tableaux.rs
src/: calculus.rs  lib.rs  tamper_protect.rs
src/calculi/: mod.rs
src/calculi/tableaux/: mod.rs  prop.rs
src/clause/: mod.rs
src/logic/: mod.rs  transform.rs
src/parse/: clause_set.rs  mod.rs
