[package]
name = "kalkulierbar"
version = "0.1.0"
authors = ["Daniel <d.drodt@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
sha3 = "0.10"
scoped-tls = "1.0.0"
smallvec = "1.8.0"