[package]
name = "kalkulierbar"
version = "0.1.0"
authors = ["Daniel <d.drodt@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10"
scoped-tls = "1.0"
smallvec = "1.10"

[dev-dependencies]
serde_json = "1.0"
