[package]
name = "kalkulierbar_server"
version = "0.1.0"
authors = ["Daniel <d.drodt@gmx.de>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kalkulierbar = { path = "../kalkulierbar" }
actix-web = "4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
chrono = "0.4"
lazy_static = "1.4"
env_logger = "0.10"
